--- a/src/app/components/academic-track/track-selections/track-selections.component.less
+++ b/src/app/components/academic-track/track-selections/track-selections.component.less
@@ -1,6 +1,6 @@
 .track-name {
   transition: all 0.3s cubic-bezier(.25, .8, .7, 1);
-  margin: 1rem 1rem 0 1rem;
+  margin: 1rem 0 0;
   width: 100%;
   color: white;
 
